# A52024S1

A5/: README.md  main.py  pyproject.toml
A5/UI/: ui.py
A5/constants/: const.py
A5/controller/: controller.py
A5/domain/: passenger.py  plane.py
A5/repository/: passenger_repository.py  plane_repository.py  repository.py
A5/repository/output/: passenger_data.txt  plane_data.txt
A5/service/: passenger_service.py  plane_service.py  service.py
A5/tests/: __init__.py  test_passenger_service.py  test_plane_service.py  test_repo.py  tests.py
A5/utils/: file_handler.py  utilities.py
